# openapi-codegen-rs

./: Cargo.toml  README.md
openapi-codegen/: Cargo.toml
openapi-codegen/src/: lib.rs
openapi-codegen/src/client/: api.rs  mod.rs  model.rs
openapi-codegen/src/client/resources/: api.mustache  api_mod.mustache  mod.mustache  model_enum.mustache  model_mod.mustache  model_newtype.mustache  model_struct.mustache
tests/openapi-examples/: Cargo.toml  build.rs
tests/openapi-examples/api-with-examples/: Cargo.toml  build.rs
tests/openapi-examples/api-with-examples/src/: lib.rs
tests/openapi-examples/api-with-examples/src/api_with_examples/apis/: untagged_api.rs
tests/openapi-examples/callback-example/: Cargo.toml  build.rs
tests/openapi-examples/callback-example/src/: lib.rs
tests/openapi-examples/callback-example/src/callback_example/apis/: untagged_api.rs
tests/openapi-examples/link-example/: Cargo.toml  build.rs
tests/openapi-examples/link-example/src/: lib.rs
tests/openapi-examples/link-example/src/link_example/apis/: untagged_api.rs
tests/openapi-examples/link-example/src/link_example/models/: mod.rs  pullrequest.rs  repository.rs  user.rs
tests/openapi-examples/petstore/: Cargo.toml  build.rs
tests/openapi-examples/petstore-expanded/: Cargo.toml  build.rs
tests/openapi-examples/petstore-expanded/src/: lib.rs
tests/openapi-examples/petstore-expanded/src/petstore_expanded/apis/: mod.rs  untagged_api.rs
tests/openapi-examples/petstore-expanded/src/petstore_expanded/models/: mod.rs  new_pet.rs  pet.rs
tests/openapi-examples/petstore/src/: lib.rs
tests/openapi-examples/petstore/src/petstore/apis/: mod.rs  pets_api.rs
tests/openapi-examples/petstore/src/petstore/models/: error.rs  mod.rs  pet.rs
tests/openapi-examples/src/: lib.rs
tests/openapi-examples/src/api_with_examples/apis/: untagged_api.rs
tests/openapi-examples/src/callback_example/apis/: untagged_api.rs
tests/openapi-examples/src/link_example/apis/: untagged_api.rs
tests/openapi-examples/src/link_example/models/: pullrequest.rs  repository.rs  user.rs
tests/openapi-examples/src/petstore/apis/: mod.rs  pets_api.rs  request.rs
tests/openapi-examples/src/petstore/models/: pet.rs  pets.rs
tests/openapi-examples/src/petstore_expanded/apis/: mod.rs  untagged_api.rs
tests/openapi-examples/src/petstore_expanded/models/: error.rs  new_pet.rs  pet.rs
tests/openapi-examples/uspto/: Cargo.toml  build.rs
tests/openapi-examples/uspto/src/: lib.rs
