[package]
name = "openapi-codegen"
version = "0.1.0"
authors = ["Morley, Jonathan <morley.jonathan@gmail.com>"]
edition = "2018"
description = "Automatically generate rust HTTP clients from OpenAPI files."
license = "Apache-2.0"

[dependencies]
openapiv3 = "0.1"
failure = "0.1"
handlebars = "1"
heck = "0.3"
serde = "1"
serde_derive = "1"
serde_yaml = "0.8"
regex = "1"
lazy_static = "1"
