[package]
name = "callback-example"
version = "0.1.0"
authors = ["Morley, Jonathan <morley.jonathan@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.8"
url = "1"
hyper = "0.12"
base64 = "0.10"
futures = "0.1"
tokio-core = "0.1"
reqwest = "0.9"
failure = "*"

[build-dependencies]
openapi-codegen = { path = "../../../openapi-codegen" }

[dev-dependencies]
testcontainers = "0.6"
tc_generic = "0.2"
tc_core = "0.3"
